CRUD - Ciudades,Departamentos
Se hicieron los cruds tanto de las ciudades como de los departamentos,
registrar,listar,editar y eliminar

--- a/bancocliente/pages/Templates/Menus/menuAdmin.html
+++ b/bancocliente/pages/Templates/Menus/menuAdmin.html
@@ -94,6 +94,32 @@
                     <li><a href="#/Cuentas/Listar"><i class="fa fa-circle-o"></i>Listar</a></li>
                 </ul>
             </li>
+            <li class="treeview">
+                <a href="#/Departamentos/Listar">
+                    <i class="fa fa-home"></i>
+                    <span>Departamentos</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="#/Departamentos/Registrar"><i class="fa fa-circle-o"></i>Crear</a></li>
+                    <li><a href="#/Departamentos/Listar"><i class="fa fa-circle-o"></i>Listar</a></li>
+                </ul>
+            </li>
+            <li class="treeview">
+                <a href="#/Ciudades/Listar">
+                    <i class="fa fa-home"></i>
+                    <span>Ciudades</span>
+                    <span class="pull-right-container">
+                        <i class="fa fa-angle-left pull-right"></i>
+                    </span>
+                </a>
+                <ul class="treeview-menu">
+                    <li><a href="#/Ciudades/Registrar"><i class="fa fa-circle-o"></i>Crear</a></li>
+                    <li><a href="#/Ciudades/Listar"><i class="fa fa-circle-o"></i>Listar</a></li>
+                </ul>
+            </li>
         </ul>
     </section>
 </aside>
